# Configure

./: .alias  .bash_ps1  .bashrc  .cshrc  .gdbinit  .gitignore  .gitmodules  .screenrc  .tmux.2.conf  .tmux.3.conf  .tmux.conf  .tmux.conf.tl  .vimrc  .zshrc  copy_to_clipboard.sh  create_conf_file_link.sh  doxygen.conf  gitconf.sh  godaddy_setup.sh  home_mac_setup.sh  input_method.sh  install_newest_gcc.sh  install_newest_gcc_with_aptget_dep.sh  install_prefer_tools.sh  make_prefer_folder.sh  makelinkall  new_computer_setup.sh  remote-copy.sh  removeall  simple.bashrc  simple.vimrc
code_template/: test.go
command_example/: cmd_example.txt  grep.txt
develop_tool/: develop_tool.sh  install_boost.sh  install_gcc_updated.sh  install_opencv.sh
git_conf/: .gitignore_global  gitconf.sh
grub/: grub
lib_hello_world/fann/: CMakeLists.txt  train.cpp
local_conf/: atop_local_bashrc.sh
mac_os_x/: env.sh
mini_settings/: arton.bashrc  arton.vimrc
new_computer/: create_conf_file_link.sh  make_prefer_folder.sh
note/: bash.md  bash_note  cgdb_install_note  char_encode.md  command_note  compiler.md  cpp.md  debug_note  fmt.md  gdb.md  gdb_note  git.md  git_note  jenkins_note  linux_cmd_or_tool.md  linux_command.md  machine_learning.md  macos.md  make.md  markdown.md  network_note  note  path_note  programming.md  pstack  python.md  reg  reg_exp.md  seldom_command_note  selenium.md  shell_script.md  spider.md  sys_note  systemverilog.md  tmux_note  vim.md  vim_note  vscode.md  windows.md
rare_used_scripts/: add_hosts.sh
scripts/: check_load.sh
test_c++11/: Makefile  (+2 more)
(+81 files in other folders)
